--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "5.0.0"
+regex = "1.8.1"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_yaml = "0.9.21"
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
