🆕 feat(Cargo.toml): add futures 0.3.28 dependency 🔨 refactor(config.rs): make Config struct public, add get_config function, and refactor ConfigCommand::run function 🔨 refactor(main.rs): use get_config function to print config Added a new dependency for futures version 0.3.28 in Cargo.toml. In config.rs, made the Config struct public and added a get_config function to return a Result<Config, String> for use in other parts of the application. Refactored ConfigCommand::run function to use the new get_config function. In main.rs, updated the usage of ConfigCommand to use the get_config function to retrieve the Config struct and print it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dirs = "5.0.0"
+futures = "0.3.28"
 regex = "1.8.1"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_yaml = "0.9.21"
