--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ dirs = "5.0.0"
 futures = "0.3.28"
 regex = "1.8.1"
 serde = { version = "1.0.160", features = ["derive"] }
-serde_yaml = "0.9.21"
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
+toml = "0.7.3"
