--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 colored = "2.0.0"
+derive_builder = "0.12.0"
 dirs = "5.0.0"
 futures = "0.3.28"
 regex = "1.8.1"
