--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ derive_builder = "0.12.0"
 dirs = "5.0.0"
 futures = "0.3.28"
 regex = "1.8.1"
+reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
