--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.70"
 colored = "2.0.0"
 derive_builder = "0.12.0"
 dirs = "5.0.0"
+dotenv = "0.15.0"
 futures = "0.3.28"
 regex = "1.8.1"
 reqwest = { version = "0.11.16", features = ["json"] }
