--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ derive_builder = "0.12.0"
 dirs = "5.0.0"
 dotenv = "0.15.0"
 futures = "0.3.28"
-indicatif = "0.17.3"
 regex = "1.8.1"
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
+spinners = "4.1.0"
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
 toml = "0.7.3"
