--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
+atty = "0.2.14"
 colored = "2.0.0"
 crossterm = "0.26.1"
 derive_builder = "0.12.0"
