--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ futures = "0.3.28"
 regex = "1.8.1"
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
-spinners = "4.1.0"
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
 toml = "0.7.3"
+spinergy = { path = "../spinergy" }
