--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 anyhow = "1.0.70"
 atty = "0.2.14"
 colored = "2.0.0"
-crossterm = "0.26.1"
 derive_builder = "0.12.0"
 dirs = "5.0.0"
 dotenv = "0.15.0"
@@ -20,4 +19,5 @@ serde = { version = "1.0.160", features = ["derive"] }
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
 toml = "0.7.3"
-spinergy = { path = "../spinergy" }
+dialoguer = "0.10.4"
+crossbeam = "0.8.2"
