--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ tokio = { version = "1.27.0", features = ["full"] }
 toml = "0.7.3"
 dialoguer = "0.10.4"
 crossbeam = "0.8.2"
+lazy_static = "1.4.0"
+async-recursion = "1.0.4"
