--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ lazy_static = "1.4.0"
 async-recursion = "1.0.4"
 indicatif = "0.17.3"
 log = "0.4.17"
+strum = { version = "0.24", features = ["derive"] }
