--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ async-recursion = "1.0.4"
 indicatif = "0.17.3"
 log = "0.4.17"
 strum = { version = "0.24", features = ["derive"] }
+sodiumoxide = "0.2.7"
