🔧 chore(Cargo.toml): update dependencies ✨ feat(main.rs): initialize logger with level "debug" 🎉 feat(logger.rs): add init_logger function The dependencies in Cargo.toml have been updated. The logger has been added to the utils module, and init_logger function has been added. The init_logger function initializes the logger with a specified log level, or if the log level is not specified via the `LOG_LEVEL` environment variable, it defaults to the `debug` level. In the main.rs file, the logger is initialized with the `debug` level.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,7 @@ toml = "0.7.3"
 dialoguer = "0.10.4"
 crossbeam = "0.8.2"
 lazy_static = "1.4.0"
-async-recursion = "1.0.4"
 indicatif = "0.17.3"
 log = "0.4.17"
 strum = { version = "0.24", features = ["derive"] }
-sodiumoxide = "0.2.7"
+env_logger = "0.10.0"
