🚀 feat: Add prettytable-rs to Cargo.toml The changes made to the code include adding the `prettytable-rs` library to the `Cargo.toml` file and modifying the `CommitCommand` struct's `stage_all_changed_files` method's signature to take a reference to a vector of changed files. The method now uses this parameter to stage all changed files instead of calling `GitRepository::get_changed_files()`.
Additionally, the code now prompts the user to see the Git status before committing changes,

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ indicatif = "0.17.3"
 log = "0.4.17"
 strum = { version = "0.24", features = ["derive"] }
 env_logger = "0.10.0"
+prettytable-rs = "0.10.0"
