--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ log = "0.4.17"
 strum = { version = "0.24", features = ["derive"] }
 env_logger = "0.10.0"
 prettytable-rs = "0.10.0"
+git2 = "0.17.1"
+
+[dev-dependencies]
+tempfile = "3.5.0"
