--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ strum = { version = "0.24", features = ["derive"] }
 env_logger = "0.10.0"
 prettytable-rs = "0.10.0"
 git2 = "0.17.1"
+ignore = "0.4.20"
 
 [dev-dependencies]
 tempfile = "3.5.0"
