🔧 Refactor: exclude .lock files from staged diffs
This commit refactors the code to exclude files with the `.lock` extension from the staged file diffs. When getting staged file diffs, the `GitRepository` implementation checks the files' extensions and adds them to a list of excluded files if they have the `.lock` extension. This change also removes unused imports and updates dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ env_logger = "0.10.0"
 prettytable-rs = "0.10.0"
 git2 = "0.17.1"
 ignore = "0.4.20"
+term_size = "0.3.2"
 
 [dev-dependencies]
 tempfile = "3.5.0"
