🐛 fix(Cargo.toml): Update dependencies In the `Cargo.toml` file, the following changes were made: - The `reqwest` dependency was removed, and `surf` version 2.3.2 was added.
✨ feat(utils/openai.rs): Refactor API request handling
In the `openai.rs` file under the `utils` directory, the following changes were made:
- The import statements for `reqwest` were removed and replaced with `surf` equivalents.
- The `send_request` method was updated to use the `surf::Client` and `surf::StatusCode`.
- The request headers were updated to use `surf` syntax.
- The decoding of the response body was changed from `json()` to `body_json::<OAIResponse>()`.
- The handling of different `StatusCode` variants was updated to use `surf::StatusCode` enum variants.

Signed-off-by: Sabry Awad <dr.sabry1997@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ derive_builder = "0.12.0"
 dirs = "5.0.0"
 futures = "0.3.28"
 regex = "1.8.1"
-reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 structopt = "0.3.26"
 tokio = { version = "1.27.0", features = ["full"] }
@@ -28,6 +27,7 @@ prettytable-rs = "0.10.0"
 git2 = "0.17.1"
 ignore = "0.4.20"
 term_size = "0.3.2"
+surf = "2.3.2"
 
 [dev-dependencies]
 tempfile = "3.5.0"
