🎉 feat(Cargo.toml): Add textwrap dependency 📝 chore(src/commands/commit/mod.rs): Wrap commit messages for better readability 🐛 fix(src/main.rs): Remove error logging to avoid duplicate output
In the `Cargo.toml` file, the `textwrap` dependency was added.

In the `src/commands/commit/mod.rs` file, the commit messages are now wrapped using the `textwrap::fill` function to improve readability.

In the `src/main.rs` file, the error logging with the `error!` macro was removed to avoid duplicate output since the errors are already handled by the `handle_error` function.

Signed-off-by: Sabry Awad <dr.sabry1997@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ git2 = "0.17.1"
 ignore = "0.4.20"
 term_size = "0.3.2"
 surf = "2.3.2"
+textwrap = "0.16.0"
 
 [dev-dependencies]
 tempfile = "3.5.0"
